<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Norima tekstą įveskite čia"
        android:inputType="text" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/counterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Paleisti programa" />

    <TextView
        android:id="@+id/answerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>